--- a/email_text_extraction_mappings.json
+++ b/email_text_extraction_mappings.json
@@ -1,6 +1,6 @@
 {
-	"agentName": "Task_Extraction_Platform",
-	"secretName": "task_extraction_platform",
+	"agentName": "Task_Extraction_Agent",
+	"secretName": "task_extraction_agent",
 	"owner_mail": "Mahalaxmi.A@quadranttechnologies.com",
 	"ownerName": "Mahalaxmi Anumula",
 	"departName": "Engineering",
