Update agentName to text_Extraction_agent

--- a/email_text_extraction_mappings.json
+++ b/email_text_extraction_mappings.json
@@ -1,5 +1,5 @@
 {
-	"agentName": "Task_Extraction_Platform",
+	"agentName": "text_Extraction_agent",
 	"secretName": "task_extraction_platform",
 	"owner_mail": "Mahalaxmi.A@quadranttechnologies.com",
 	"ownerName": "Mahalaxmi Anumula",
