feat: Add robust PDF/DOCX parsing with multi-parser fallback system
- Implement 3-tier fallback for PDF parsing (pdf-parse → pdf2json → unpdf)
- Add enhanced error handling and validation for DOCX parser
- Install pdf2json, unpdf, and canvas dependencies for better PDF support
- Improve error messages to help users understand parsing failures
- Add empty buffer detection and better validation
- Remove unused JSON configuration files

This fixes PDF/DOCX processing issues with modern and non-standard files.

--- a/packages/parsers/package.json
+++ b/packages/parsers/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@task-platform/shared": "*",
+    "canvas": "^3.2.1",
     "mailparser": "^3.6.5",
     "mammoth": "^1.6.0",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^4.0.2",
+    "unpdf": "^1.4.0"
   },
   "devDependencies": {
     "@types/mailparser": "^3.4.6",
