--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@typescript-eslint/parser": "^6.13.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.54.0",
+    "officegen": "^0.6.5",
+    "pdfkit": "^0.17.2",
     "prettier": "^3.1.0",
     "typescript": "^5.3.2"
   },
